# Arkom_uas

./: README.md  belajar.cpp  opencl.cpp  openmp.cpp
src/: CMakeLists.txt  opencl.cpp  openmp.cpp
